# XCEC

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
cmake/: FindOpensmt.cmake  FindZ3.cmake
cmake/STP/: STPConfig.cmake  STPConfigVersion.cmake  STPTargets-relwithdebinfo.cmake  STPTargets.cmake
cmake/z3/: Z3ConfigVersion.cmake  Z3Targets.cmake
include/CRoaring/: roaring.c
include/boolector/examples/api/c/bv/: bv1.c
include/boolector/lib/cmake/Boolector/: BoolectorTargets.cmake
include/cec/: cec.h  simplify.h
include/cryptominisat5/: cryptominisat.h
include/minisat/lib/: libminisat.so.2.1.0
include/prover/: BoolectorProver.h  STPProver.h  Z3Prover.h  prover.hpp
include/stp/lib/: libstp.dylib
include/stp/lib/cmake/STP/: STPConfig.cmake  STPTargets-relwithdebinfo.cmake  STPTargets.cmake
include/util/: BoolectorProver.h  STPProver.h  Z3Prover.h  libhead.h  libstring.h  parser.h  testOp.h  util.hpp  util_z3.h
include/z3/examples/c++/: example.cpp
lib/cmake/Boolector/: BoolectorTargets-release.cmake  BoolectorTargets.cmake
lib/cmake/STP/: STPConfig.cmake  STPTargets-release.cmake  STPTargets.cmake
lib/cmake/cryptominisat5/: cryptominisat5Config.cmake  cryptominisat5Targets-relwithdebinfo.cmake  cryptominisat5Targets.cmake
lib/cmake/z3/: Z3Config.cmake  Z3Targets-release.cmake  Z3Targets.cmake
lib/cmake/z3_shared/: Z3Targets-release.cmake  Z3Targets.cmake
lib/cmake/z3_static/: Z3Targets-release.cmake  Z3Targets.cmake
lib/mac/: libcryptominisat5.5.7.dylib  libstp.2.3.dylib
lib/pkgconfig/: z3.pc
reference/: Programming Z3.htm  notes on z3 by c++.htm
src/cec/: cec.cpp  simplify.cpp
src/prover/: BoolectorProver.cpp  STPProver.cpp  Z3Prover.cpp
src/util/: BoolectorProver.cpp  STPProver.cpp  Z3Prover.cpp  libhead.cpp  libstring.cpp  parser.cpp  testOp.cpp  util_z3.cpp
test/: XCEC  run.py
test/cases/case20/: gf.v  rf.v
test/cases/case21/: gf.v  rf.v
test/cases/case22/: gf.v  rf.v
test/cases/case23/: gf.v  rf.v
test/cases/case24/: gf.v  rf.v
test/cases/case25/: rf.v
test/cases/case26/: gf.v  rf.v
test/cases/case27/: gf.v  rf.v
test/cases/case28/: gf.v  rf.v
test/cases/case29/: gf.v  rf.v
test/cases/case30/: rf.v
test/cases/case31/: gf.v  rf.v
test/log/: case0.txt  case1.txt  case10.txt  case11.txt  case12.txt  case13.txt  case14.txt  case15.txt  case16.txt  case17.txt  case18.txt  case2.txt  case20.txt  case21.txt  case22.txt  case23.txt  case24.txt  case25.txt  case26.txt  case27.txt  case28.txt  case29.txt  case3.txt  case30.txt  case31.txt  case4.txt  case5.txt  case6.txt  case7.txt  case8.txt  case9.txt
test/output/: output_case0.txt  output_case1.txt  output_case10.txt  output_case11.txt  output_case12.txt  output_case13.txt  output_case14.txt  output_case15.txt  output_case16.txt  output_case17.txt  output_case18.txt  output_case2.txt  output_case23.txt  output_case3.txt  output_case4.txt  output_case5.txt  output_case6.txt  output_case7.txt  output_case8.txt  output_case9.txt
